tests/macro-build-tests/pdcstr-compile-fail.other.stderr
error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:3:34
  |
3 |     let _ = netcorehost::pdcstr!("\0");
  |                                  ^^^^

error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:4:34
  |
4 |     let _ = netcorehost::pdcstr!("somerandomteststring\0");
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:5:34
  |
5 |     let _ = netcorehost::pdcstr!("somerandomteststring\0somerandomteststring");
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: nul byte found in the literal
 --> $DIR/pdcstr-compile-fail.rs:6:34
  |
6 |     let _ = netcorehost::pdcstr!("somerandomteststring\0somerandomteststring");
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
